[tool.poetry]
name = "anthropic-function-calling"
version = "0.1.0"
description = ""
authors = ["Aditya Advani <aditya@bestparents.com>"]
readme = "README.md"
packages = [{include = "anthropic_function_calling"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
lxml = "^4.9.3"
flask = "^2.3.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
sklearn = "^0.0.post7"
statsmodels = "^0.14.0"
plotly = "^5.15.0"
cufflinks = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
